objects/CSAPEN_Customer_Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Clickable reference to the main customer contact associated with this initiative. Users will be able to search and select the appropriate customer contact from a list of all the contacts in SFDC.</description>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Initiatives/Business Priorities</relationshipLabel>
        <relationshipName>R00N30000001VfV7EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Clickable reference to the customer goal that this Initiative is related to.</description>
        <label>Customer Goal</label>
        <referenceTo>CSAPEN_Customer_Goal__c</referenceTo>
        <relationshipLabel>Customer Initiatives</relationshipLabel>
        <relationshipName>R00N30000001VfV5EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiative_Description__c</fullName>
        <description>Text field for a more detailed description of the initiative.</description>
        <label>Initiative Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Field used to capture any other important information relevant to better understand, and track the initiative.</description>
        <label>Other Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>URL field for link to other relevant information.</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Performance_Measurement__c</fullName>
        <description>Metrics that will be tracked to quantify the initiative. Use this field to understand how the Customer measures success/progress for this initiative.</description>
        <label>Performance Measurement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SiteMapIdentifier__c</fullName>
        <description>Determines how the record displays on the site map</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteMapIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Account Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Cust_Goal_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Cust Goal Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Cust_Init_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Cust Init Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the initiative.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <description>Approximate time over which the customer will pursue this goal.</description>
        <label>Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-12 months</fullName>
                </value>
                <value>
                    <fullName>12-18 months</fullName>
                </value>
                <value>
                    <fullName>18-36 Months</fullName>
                </value>
                <value>
                    <fullName>3-5 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Initiative__c</fullName>
        <description>Picklist field that identifies the nature of the initiative.</description>
        <label>Initiative Type/Customer Actions Taken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Initiative</label>
    <nameField>
        <label>Customer Initiative</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>